--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:dev": "webpack --w --mode development --config webpack.config.js",
+    "build:pro": "webpack --w --mode production",
+    "dev": "nodemon ./dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,8 @@
     "typescript": "^3.0.3",
     "webpack": "^4.17.2",
     "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.0"
   }
 }
