--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/nhanlt-ibl/socket-sample#readme",
   "dependencies": {
+    "@types/node": "^10.9.4",
+    "express": "^4.16.3",
+    "http": "^0.0.0",
+    "socket.io": "^2.1.1",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
     "webpack": "^4.17.2",
