--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/nhanlt-ibl/socket-sample#readme",
   "dependencies": {
+    "@types/express": "^4.16.0",
     "@types/node": "^10.9.4",
+    "@types/socket.io": "^1.4.38",
     "express": "^4.16.3",
     "http": "^0.0.0",
+    "react-json-view": "^1.19.1",
     "socket.io": "^2.1.1",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
