--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build:browser": "webpack --w --mode development --config webpack.client.js",
+    "build:server": "webpack --w --mode development --config webpack.config.js",
     "build:dev": "webpack --w --mode development --config webpack.config.js",
     "build:pro": "webpack --w --mode production",
     "dev": "nodemon ./dist/server.js"
@@ -22,10 +24,16 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/node": "^10.9.4",
+    "@types/react": "^16.4.13",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-router-dom": "^4.3.0",
     "@types/socket.io": "^1.4.38",
     "express": "^4.16.3",
     "http": "^0.0.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-json-view": "^1.19.1",
+    "react-router-dom": "^4.3.1",
     "socket.io": "^2.1.1",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
