--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "allowJs": true,
     "skipLibCheck": true,
+    "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "/",
     "strictFunctionTypes": false,
@@ -29,7 +30,7 @@
     "src/setupTests.ts"
   ],
   "include": [
-    "./src/**/*.ts", "webpack.config.js"
+    "./src/**/*.ts", "webpack.config.js", "src/Client/Client.tsx"
   ],
   "types": [
     "typePatches",
