--- a/package.json
+++ b/package.json
@@ -24,21 +24,25 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/node": "^10.9.4",
+    "@types/python-shell": "^0.4.1",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.0",
     "@types/socket.io": "^1.4.38",
     "express": "^4.16.3",
     "http": "^0.0.0",
+    "python-shell": "^1.0.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-json-view": "^1.19.1",
+    "react-md": "^1.5.1",
     "react-router-dom": "^4.3.1",
     "socket.io": "^2.1.1",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
     "webpack": "^4.17.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "xlsx": "^0.14.0"
   },
   "devDependencies": {
     "webpack-cli": "^3.1.0"
