--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/socket.io": "^1.4.38",
     "express": "^4.16.3",
     "http": "^0.0.0",
+    "jquery": "^3.3.1",
     "python-shell": "^1.0.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
