--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.0",
     "@types/socket.io": "^1.4.38",
+    "@types/socket.io-client": "^1.4.32",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "http": "^0.0.0",
     "jquery": "^3.3.1",
@@ -39,6 +41,7 @@
     "react-md": "^1.5.1",
     "react-router-dom": "^4.3.1",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "ts-loader": "^5.0.0",
     "typescript": "^3.0.3",
     "webpack": "^4.17.2",
